[RC] 重构日志模块